data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_761.wast
;; 2. **Test Description**:    Embed multiple `nop` instructions inside a loop before a `br_table`. Use an index just beyond the valid target range. This checks whether the `nop` instructions in a loop context cause any impact on the indirect branching.      **Specific Constraint**: Verifies `nop` within loop does not alter `br_table` behavior.      **Edge Case**: Index slightly beyond last valid range in `br_table`.

(assert_invalid
  (module
    (func (loop (nop) (nop) (br_table 0 1))))
  "invalid br_table index"
)